# finn_mckinleyDT2023

./: .breakpoints  .replit  README.md  main.py  mydb.db  pyproject.toml
code/: main.py
code/templates/: about.html  footer.html  header.html  home.html  layout.html  nav.html  style.css
static/: style.css
templates/: add_player.html  add_team.html  edit.html  edit_player.html  error.html  footer.html  header.html  home.html  layout.html  players.html  teams.html  update.html  update_player.html  update_team.html
