[tool.poetry]
name = "finnmckinleydt2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.2"
SQLAlchemy = "2.0.17"
SQLAlchemyUtils = "0.0.7"
SQLAlchemy-Utils = "^0.41.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
